2006-01-16  Johan Dahlin  <johan@gnome.org>

	* Makefile.am: Include dsextras.py in the dist and install it.

2006-03-19  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/pygobject.c (pygobject_new_with_interfaces): Remove
	comment "It will currently not filter out interfaces already
	implemented by it parents.", since it is no longer true since
	2006-01-13.

=== PyGObject 2.10.0 ===
2006-01-16  Johan Dahlin  <johan@gnome.org>

	* NEWS: Update

2006-03-09 Michael Smith  <msmith@fluendo.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* gobject/pygenum.c: (pyg_enum_new), (pyg_enum_from_gtype),
	(pyg_enum_add):
	* gobject/pygflags.c: (pyg_flags_new), (pyg_flags_from_gtype),
	(pyg_flags_add):
	Plug a couple of leaks, fixes #334027.

2006-01-19  Johan Dahlin  <johan@gnome.org>

	* configure.ac (export_dynamic):
	* Makefile.am (egg):
	Add a make egg target

2006-01-16  Johan Dahlin  <johan@gnome.org>

	* configure.ac: Post release version bump

=== PyGObject 2.9.1 ===
2006-01-16  Johan Dahlin  <johan@gnome.org>

	* NEWS: Update

2006-01-15  Christopher Aillon  <caillon@redhat.com>

	* gobject/gobjectmodule.c (pyg_strv_to_gvalue):
	Don't call g_value_init since the other *_to_gvalue
	methods expect an already inited GValue

2006-01-14  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/gobjectmodule.c (iowatch_marshal): Warn if io callback
	returns None: almost always this is an error.

2006-01-13  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/pygobject.c (pygobject_register_class): Change strategy
	a bit: don't ignore bases; use but augment it with missing bases
	extracted in runtime.

	* gobject/pygobject.c (pygobject_register_class): Don't use the
	passed in 'bases' parameter; instead find out in runtime the bases
	for any given gtype.
	(pyg_type_get_bases, pygobject_new_with_interfaces): Refactor code
	that dynamically discovers bases into a separate function;
	Override tp_dealloc, tp_alloc, tp_free, tp_traverse, and tp_clear,