@@ -1,3 +1,10 @@
+2006-04-01  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
+
+	* gobject/gobjectmodule.c (_pyg_strv_to_gvalue): Don't allow
+	arbitrary sequences, only tuple or list, since a string is a
+	sequence too.
+	(pyg_object_new): Add a bit more detail to the exception string.
+
 2006-01-16  Johan Dahlin  <johan@gnome.org>
 
 	* Makefile.am: Include dsextras.py in the dist and install it.
